src/main/java/com/example/payroll/errors/EmployeeNotFoundException.java
package com.example.payroll.errors;

public class EmployeeNotFoundException extends RuntimeException {
    public EmployeeNotFoundException(Long id) {
        super("employee doesnt exist with id : " + id);
    }
}
